# hackathon050926

./: .env.example  .env.local.example  .gitignore  AGENTS.md  BUILD_PROMPT.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
agent/: .env.example  agent.py  prompts.py  requirements.txt
agent/tools/: __init__.py  approval.py  state.py  x_client.py
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/draft/: route.ts
app/api/reply/: route.ts
app/api/schedule/: route.ts
app/api/settings/: route.ts
app/approve/: approve-list.tsx  page.tsx
app/audience/: audience-refresh.tsx  page.tsx
app/draft/: draft-studio.tsx  page.tsx
app/inbox/: inbox-controls.tsx  page.tsx
app/settings/: page.tsx  settings-form.tsx
components/: launch-chat.tsx  nav.tsx
db/: schema.sql
examples/: audience_spec.json  content_to_test.json
lib/: anthropic.ts  prompts.ts  supabase-server.ts  supabase.ts  synthaudience-types.ts  types.ts  x-client.ts
src/synthaudience/: __init__.py  api.py  cli.py  config.py  db.py  llm.py  memory.py  models.py  video.py
src/synthaudience/agents/: agent.py  prompts.py
src/synthaudience/discovery/: reddit.py  scheduler.py
src/synthaudience/evaluation/: aggregator.py  runner.py
src/synthaudience/personas/: generator.py  prompts.py  text_to_spec.py
tests/: conftest.py  test_agent_eval.py  test_aggregator.py  test_api.py  test_discovery.py  test_e2e.py  test_live_llm.py  test_memory.py  test_personas.py  test_reddit.py  test_text_to_spec.py  test_video.py
worker/: index.ts
(+3 files in other folders)
